# serenity-research

./: AGENTS.md  README.md  pyproject.toml  reddit-wig-industry-analysis.md
data/processed/: serenity.db
data/raw/: sample_tweets.csv
knowledge_graph/: serenity_graph.json
reports/: serenity_report.md
src/: cli.py
src/analysis/: failure_case_analysis.py  success_case_analysis.py  timeline_analysis.py  topic_analysis.py
src/domain/: models.py
src/extraction/: company_extractor.py  prediction_extractor.py  theme_extractor.py  thesis_extractor.py  ticker_extractor.py
src/graph/: build_graph.py
src/ingestion/: import_csv.py  import_json.py  normalize.py
src/reporting/: markdown_report.py
src/storage/: db.py  schema.sql
test-posts/: test-1-hair.md  test-2-curlyhair.md  test-3-ecommerce.md
tests/: test_extractors.py  test_graph.py  test_ingestion.py  test_storage_and_report.py
